--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -34,7 +34,7 @@ body {
 .card {
   background-color: #fff;
   border-radius: .25rem;
-  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 1px 0px rgba(0, 0, 0, 0.25);
   border: 1px solid #e8e8e8;
   margin-top: 40px;
   padding: 0;
@@ -88,7 +88,6 @@ input {
 .gram-actions a {
   font-weight: bold;
   font-size: 16px;
-  margin-left: auto;
   margin-right: 20px;
 }
 
@@ -109,4 +108,8 @@ input {
 
 .btn.btn-primary {
   background-color: #125688;
+}
+
+#gram_picture {
+    display: block;
 }
