--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -14,13 +14,18 @@ body {
   padding-top: 15px;
 }
 
+.top-nav a {
+  text-decoration: none;
+  color: #125688
+}
+
 .top-nav .add {
   margin-top: 10px;
 }
 
 .top-nav .add a {
   font-weight: bold;
-  color: #125688;
+  /*color: #125688;*/
   font-size: 16px;
   padding-left: 8px;
 }
